--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,1 +1,7 @@
-file-path: D:/private/
+spring:
+  datasource:
+    url: jdbc:mysql://218.28.30.170:51206/competition?serverTimezone=GMT%2B8&characterEncoding=utf8&useUnicode=true&useSSL=false&nullNamePatternMatchesAll=true&allowPublicKeyRetrieval=true
+    username: root
+    password: henu@rjxy#2023%
+swagger:
+  enabled: true
