--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,1 +1,7 @@
-file-path: /root/jw/
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:51206/competition?serverTimezone=GMT%2B8&characterEncoding=utf8&useUnicode=true&useSSL=false&nullNamePatternMatchesAll=true&allowPublicKeyRetrieval=true
+    username: root
+    password: henu@rjxy#2023%
+swagger:
+  enabled: false
